Bug 71401 - Weston always records from primary display on Multi Head and does not record from secondary display
Summary: Weston always records from primary display on Multi Head and does not record ...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-08 20:44 UTC by Anu Reddy
Modified: 2014-01-09 16:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2013-11-08 20:44:54 UTC
Steps :

1.   Two cold plugged displays running on Weston, identify one of them as primary (display1) and other one as secondary (display2)
2.  Start recording the session from secondary display (display2) using <Super> + r (record entire session from secondary display)
3.  Launch Weston terminal on secondary display (display2)
4.  Type some text into Weston terminal in secondary display (display2)
5.  Rotate the Weston-terminal window using <Super> + Right mouse button and move mouse in circular motion in secondary display (display2) 
6.  Stop recording with <Super> + r and exit using <ctrl>+<alt>+<backspace> in secondary display
7.  From command line encode the recorded session. Observe number of frames = 1 frame
8.  Play back the recorded session video (observe recorded session is of primary output)


Expected Result: Secondary display (display2) session is recorded and not the primary display (display1) session.


Actual Result: Recorded display session time is 0sec and file size is 10KB from the primary display session. Weston recorded from primary display session even though no actions performed in the primary display. User actions are performed in secondary display, this session was not recorded.
 

Environment:
wayland (HEAD) heads/1.3-0-g84247b7
drm (HEAD) libdrm-2.4.46-0-gc6d73cf
mesa (HEAD) remotes/origin/9.2-0-g7ab2b8c
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) remotes/origin/1.3-0-g98562c3
Comment 1 Kristian Høgsberg 2013-12-20 06:53:10 UTC
commit 41b829c025fb92d601e2a41468a2f281e3c8731e
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Wed Dec 18 19:51:39 2013 +0200

    screenshooter: Choose output to record from based on keyboard focus
    
    Record from the output of the surface that has keyboard focus for the
    seat used to activate the recorder key binding. If there is no focused
    surface, record from the first one.
    
    Also, use the weston_transformed_region() to transform the damage
    region of the output into the coordinates expected by read_pixels().
    
    https://bugs.freedesktop.org/show_bug.cgi?id=71401


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.